update pom.xml to have first dependencies/build